[package]
name = "ve"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = { version = "0.30.0", default-features = false, features = ["termion"] }
unicode-segmentation = "1.12.0"
unicode-width = "0.2.2"

[lib]
path = "src/lib/lib.rs"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
